Published multiple files

--- a/src/site/notes/2. Areas/Digital Garden/认知极限.md
+++ b/src/site/notes/2. Areas/Digital Garden/认知极限.md
@@ -22,7 +22,7 @@
 
 4. **知识提取与应用限制 (Knowledge Retrieval & Application Limits):**
    - **编程:** 指在需要时，从长期记忆中快速准确地提取相关语法、算法、设计模式、库函数用法等知识，并将其灵活应用于当前问题的能力。知识储备不足或提取困难，都会成为瓶颈。
-   - **写作:** 指从知识储备中提取相关信息、事例、词汇、句式结构并应用于写作任务的能力。缺乏领域知识、词汇量贫乏、不熟悉文体规范都会限制表达。
+   - **写作:** 指从知识储备中提取相关信息、事例、词汇、句式结构并应用于写作任务的能力。缺乏领域知识、词汇量贫乏、不熟悉文体规范[^1]都会限制表达。
 
 5. **决策疲劳 (Decision Fatigue):**
    - **编程:** 编程过程充满了微小的决策（变量命名、函数划分、错误处理方式等）。长时间编码后，做出高质量决策的能力会下降，可能导致选择次优方案或留下技术债。
@@ -45,7 +45,7 @@
    - （写作）记录写特定章节或完成某部分修改用了多长时间。
 
 3. **寻求反馈 (Seeking Feedback):**
-   - **编程:** Code Review 是绝佳途径。同事可能会指出你因工作记忆过载而忽略的逻辑漏洞，或因知识盲点造成的低效实现。
+   - **编程:** [[2. Areas/Digital Garden/LLM Code Review Practice\|LLM Code Review Practice]]。同事可能会指出你因工作记忆过载而忽略的逻辑漏洞，或因知识盲点造成的低效实现。
    - **写作:** 请他人阅读你的草稿。他们能否顺畅理解你的思路？结构是否清晰？论证是否充分？这些反馈能揭示你认知上的“盲区”。
 
 4. **识别触发因素 (Identifying Triggers):**
@@ -99,3 +99,5 @@
 **结论:**
 
 认知极限是我们作为思考者和创造者必须面对的现实。在编程和写作这两个高强度认知活动中，理解自身的极限、有意识地观察和反思、并运用有效的策略来管理、绕过甚至逐步拓展这些极限，是持续进步和达成更高成就的关键。这更像是一场与自我认知的对话和一场持久的马拉松，而非一蹴而就的冲刺。通过持续的实践和调整，你可以更有效地利用有限的认知资源，创造出更优质的代码和文字。
+
+[^1]: - **学术论文：** 通常需要使用规范的参考文献格式（如APA、MLA、Chicago等），详细列出所引用的文献信息。
